# HALPI2-firmware

./: .bumpversion.cfg  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_PROCESS.md  run
.github/: README.md
.github/actions/build-deb/: action.yml
.github/actions/run-tests/: action.yml
.github/scripts/: calculate-revision.sh  generate-changelog.sh  generate-release-notes.sh  read-version.sh
.github/templates/: release-notes.md.template
.github/workflows/: build.yml  draft-release.yml  main.yml  release.yml
bootloader/: Cargo.toml
debian/: changelog  conffiles  control  copyright  dirs  firmware.conf  halpi2-firmware.lintian-overrides  install.in  postinst  rules
docker/: Dockerfile.debtools  docker-compose.debtools.yml
docs/solutions/build-errors/: uf2-conversion-address-mismatch-2026-04-23.md
firmware/: Cargo.toml  VERSION  memory.x
firmware/src/: config.rs  config_manager.rs  config_resources.rs  flash_layout.rs  led_patterns.rs  main.rs
firmware/src/tasks/: config_manager.rs  flash_writer.rs  gpio_input.rs  host_watchdog.rs  i2c_peripheral.rs  i2c_secondary.rs  led_blinker.rs  mark_firmware_booted.rs  mod.rs  power_button.rs  state_machine.rs  watchdog_feeder.rs
gen-bindings/: Cargo.toml
gen-bindings/src/: main.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
src/: config.rs  config_resources.rs  flash_config.rs  led_patterns.rs  main.rs
src/tasks/: flash_writer.rs  gpio_input.rs  i2c_peripheral.rs  i2c_secondary.rs  i2c_slave.rs  led_blinker.rs  mod.rs  power_button.rs  state_machine.rs
