[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"
description = "HALPI2 firmware bootloader"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
    "rp2040",
] }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
cfg-if = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]
