[package]
edition = "2024"
name = "halpi2-rs-firmware"
version = "3.1.2"
authors = ["Matti Airas <matti.airas@hatlabs.fi>"]
resolver = "3"

[[bin]]
name = "halpi2-rs-firmware"
test = false
bench = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.3"

# for assign resources example
#assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }
assign-resources = { version = "0.5.0" }

embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
  "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343", features = [
  "defmt",
] }
embassy-boot = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343" }
embassy-boot-rp = { git = "https://github.com/embassy-rs/embassy", rev = "c637ee7d79552d9b9bfa0c0f4199372975acc343" }

smart-leds = "0.4.0"
embedded-alloc = "0.6.0"
sequential-storage = "4.0.1"
serde = { version = "1.0.219", default-features = false, features = [
  "derive",
  "alloc",
] }
embedded-storage-async = "0.4.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
crc = "3.3.0"
static_cell = "2.1.0"
statig = { git = "https://github.com/mdeloof/statig", rev = "cc0b4c8bedb80ca4728884812e07b880ba0010a0", features = ["async"] }
