[package]
name = "shared-types"
version = "0.1.0"
edition = "2024"

[features]
# Enable this feature when used by the bindings generator
bindgen = ["dep:postcard-bindgen"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
embedded-alloc = "0.6.0"

[dependencies.postcard-bindgen]
version = "0.7.0" # Use the latest version
optional = true
